[workspace]

resolver = "2"
members = ["day*"]

[workspace.dependencies]
anyhow = "1.0"     # Error handling
itertools = "0.14" # iterator helpers
indoc = "2.0"      # macro for indented string literals
regex = "1.10"     # regex
nom = "7.1"        # parser combinator

[workspace.metadata]
advent-of-code-year = 2015

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
